--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 *.mov
+.DS_Store
+bin/puzzleScriptMISDebug.app/Contents/Resources/storerecord/*
+bin/puzzleScriptMIS.app/Contents/Resources/storerecord/*
