--- a/puzzleScriptMIS.xcodeproj/xcshareddata/xcschemes/puzzleScriptMIS Release.xcscheme
+++ b/puzzleScriptMIS.xcodeproj/xcshareddata/xcschemes/puzzleScriptMIS Release.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "puzzleScriptMIS.app"
-               BlueprintName = "puzzleScriptMIS"
-               ReferencedContainer = "container:puzzleScriptMIS.xcodeproj">
+               BuildableName = "puzzlescriptmis.app"
+               BlueprintName = "puzzlescriptmis"
+               ReferencedContainer = "container:puzzlescriptmis.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,32 +26,27 @@
       buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      enableAddressSanitizer = "YES"
-      enableUBSanitizer = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "puzzleScriptMIS.app"
-            BlueprintName = "puzzleScriptMIS"
-            ReferencedContainer = "container:puzzleScriptMIS.xcodeproj">
+            BuildableName = "puzzlescriptmis.app"
+            BlueprintName = "puzzlescriptmis"
+            ReferencedContainer = "container:puzzlescriptmis.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      disableMainThreadChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
-      debugDocumentVersioning = "YES"
+      debugDocumentVersioning = "NO"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
@@ -59,28 +54,26 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "puzzleScriptMIS.app"
-            BlueprintName = "puzzleScriptMIS"
-            ReferencedContainer = "container:puzzleScriptMIS.xcodeproj">
+            BuildableName = "puzzlescriptmis.app"
+            BlueprintName = "puzzlescriptmis"
+            ReferencedContainer = "container:puzzlescriptmis.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "NO">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "puzzleScriptMIS.app"
-            BlueprintName = "puzzleScriptMIS"
-            ReferencedContainer = "container:puzzleScriptMIS.xcodeproj">
+            BuildableName = "puzzlescriptmis.app"
+            BlueprintName = "puzzlescriptmis"
+            ReferencedContainer = "container:puzzlescriptmis.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
