--- a/bin/puzzleScriptMISDebug.app/Contents/Info.plist
+++ b/bin/puzzleScriptMISDebug.app/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>puzzleScriptMISDebug</string>
+	<string>puzzlescriptmisDebug</string>
 	<key>CFBundleIconFile</key>
 	<string>of_debug.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>puzzleScriptMISDebug</string>
+	<string>puzzlescriptmis</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -35,15 +35,15 @@
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>14.4</string>
+	<string>14.5</string>
 	<key>DTSDKBuild</key>
-	<string>23E208</string>
+	<string>23F73</string>
 	<key>DTSDKName</key>
-	<string>macosx14.4</string>
+	<string>macosx14.5</string>
 	<key>DTXcode</key>
-	<string>1530</string>
+	<string>1540</string>
 	<key>DTXcodeBuild</key>
-	<string>15E204a</string>
+	<string>15F31d</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.graphics-design</string>
 	<key>LSMinimumSystemVersion</key>
