--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *.mov
 .DS_Store
-bin/puzzleScriptMISDebug.app/*
-bin/puzzleScriptMIS.app/*
+bin/puzzlescriptmis.app/
+bin/puzzlescriptmisDebug.app/
